[metadata]
name = pymarker
version = PLACE_HOLDER_VERSION
author = Pablo Silva
author_email = pablodiegoss@hotmail.com
description = A python package to generate AR markers and patterns based on input images
long_description = file: README.md
long_description_content_type = text/markdown
keywords = AR, pattern, markers, jandig, hiro
url = https://github.com/pablodiegoss/pymarker
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires=">=3.5"
install_requires =
    click >= 7.1.1
    pillow >= 7.1.0

[options.entry_points]
console_scripts = 
    pymarker = pymarker.cli:main
